# slime_sim

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.claude/: settings.json
src/: config_io.rs  food.rs  gpu.rs  main.rs  simulation.rs  ui.rs
src/shaders/: blit.wgsl  colour.wgsl  diffuse.wgsl  update.wgsl
