[package]
name = "slime_sim"
version = "0.1.0"
edition = "2024"
description = "GPU-accelerated slime mold simulation using wgpu"
license = "MIT"
repository = "https://github.com/natemcintosh/slime_sim"
keywords = ["simulation", "slime-mold", "wgpu", "gpu", "compute-shader"]
categories = ["simulation", "graphics", "rendering"]

[dependencies]
wgpu = "27"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.38", features = ["serialize"] }

[dev-dependencies]
rstest = "0.26"
